@@ -6377,9 +6377,9 @@ SCIP_RETCODE generateClusterCuts(
 
             SCIPdebugMessage("applying MIR with delta = %g\n", deltas[d]);
             SCIP_CALL( SCIPcalcMIR(scip, sol, BOUNDSWITCH, USEVBDS, ALLOWLOCAL, sepadata->fixintegralrhs, NULL, NULL,
-                                   (int)MAXAGGRLEN(nvars), sepadata->maxweightrange, MINFRAC, MAXFRAC, rowweights, 1.0/deltas[d],
-                                   NULL, NULL, cutcoefs, &cutrhs, &cutact,
-                                   &success, &cutislocal, &cutrank) );
+                  (int)MAXAGGRLEN(nvars), sepadata->maxweightrange, MINFRAC, MAXFRAC, rowweights, NULL, 1.0/deltas[d],
+                  NULL, NULL, cutcoefs, &cutrhs, &cutact,
+                  &success, &cutislocal, &cutrank) );
             assert(ALLOWLOCAL || !cutislocal);
 
             /* // no success means row was too long or empty, there is a free
@@ -6562,8 +6562,8 @@ SCIP_RETCODE generateClusterCuts(
 
                   SCIPdebugMessage("applying MIR with delta = %g to flowcut inequality (violation improvement: %g)\n", bestdelta, totalviolationdelta);
                   SCIP_CALL( SCIPcalcMIR(scip, sol, BOUNDSWITCH, USEVBDS, ALLOWLOCAL, sepadata->fixintegralrhs, NULL, NULL,
-                                         (int)MAXAGGRLEN(nvars), sepadata->maxweightrange, MINFRAC, MAXFRAC, rowweights, 1.0/bestdelta, NULL, NULL,
-                                         cutcoefs, &cutrhs, &cutact, &success, &cutislocal, &cutrank) );
+                        (int)MAXAGGRLEN(nvars), sepadata->maxweightrange, MINFRAC, MAXFRAC, rowweights, NULL, 1.0/bestdelta, NULL, NULL,
+                        cutcoefs, &cutrhs, &cutact, &success, &cutislocal, &cutrank) );
                   assert(ALLOWLOCAL || !cutislocal);
 
                   if( success && SCIPisFeasGT(scip, cutact, cutrhs) )
